--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="app.min.css">
   <link rel="stylesheet" type="text/css" href="vendor.min.css">
+  <link rel="stylesheet" type="text/css" href="app.min.css">
+  
 </head>
 <body>
-<script type="text/javascript" src="app.min.js"></script>
 <script type="text/javascript" src="vendor.min.js"></script>
 <script type="text/javascript" src="templates.min.js"></script>
-
+<script type="text/javascript" src="app.min.js"></script>
 </body>
 </html>
