--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,9 @@
   
 </head>
 <body>
+  <div id="site-container" ng-app="wyborySam2014" ui-view></div>
 <script type="text/javascript" src="vendor.min.js"></script>
-<script type="text/javascript" src="templates.min.js"></script>
 <script type="text/javascript" src="app.min.js"></script>
+<script type="text/javascript" src="templates.min.js"></script>
 </body>
 </html>
