--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="vendor.min.css">
+  <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="app.min.css">
   
 </head>
