UTF-8 encoding added

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <title></title>
   <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="app.min.css">
-  
+  <meta charset="UTF-8">
 </head>
 <body>
   <div id="site-container" ng-app="wyborySam2014" ui-view></div>
