--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Wyręczamy PKW!</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="app.min.css">
   <meta charset="UTF-8">
