--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="app.min.css">
+  
+  <meta property="og:title" content="Wyręczamy PKW - Wyniki wyborów samorządowych 2014 online!" />
+  <meta property="og:type" content="video.movie" />
+  <meta property="og:site_name" content="website" />
+  <meta property="og:url" content="http://pkw.miastojestnasze.org/img/fb-share.jpg" />
+  <meta property="og:description" content="Mija rok od wyborów samorządowych, ale wyników w internecie nadal nie ma. Stowarzyszenie Miasto Jest Nasze postanowiło nie czekać w nieskończoność i opublikować je same - w przejrzystej i interaktywnej formie." />
   <meta charset="UTF-8">
 </head>
+
 <body>
   <div id="site-container" ng-app="wyborySam2014" ui-view></div>
 <script type="text/javascript" src="vendor.min.js"></script>
