opengraph meta fix

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
   <meta property="og:title" content="Wyręczamy PKW - Wyniki wyborów samorządowych 2014 online!" />
   <meta property="og:type" content="video.movie" />
   <meta property="og:site_name" content="website" />
-  <meta property="og:url" content="http://pkw.miastojestnasze.org/img/fb-share.jpg" />
+  <meta property="og:url" content="http://pkw.miastojestnasze.org" />
+  <meta property="og:image" content="http://pkw.miastojestnasze.org/img/fb-share.jpg" />
   <meta property="og:description" content="Mija rok od wyborów samorządowych, ale wyników w internecie nadal nie ma. Stowarzyszenie Miasto Jest Nasze postanowiło nie czekać w nieskończoność i opublikować je same - w przejrzystej i interaktywnej formie." />
   <meta charset="UTF-8">
 </head>
